//
//  StringConstants.swift
//  Titanic
//
//  Created by Maik on 05.03.20.
//  Copyright © 2020 maikdrop. All rights reserved.
//

import Foundation

//String Constants

// MARK: - Storyboard Name
let MAIN = "Main"


// MARK: - HighscoreListTableViewController Cell Identifier
let HIGHSCORE_ENTRY_CELL = "highscoreEntryCell"


// MARK: - GameViewController Segues
let SHOW_HIGHSCORE_LIST = "showHighscoreList"
let SHOW_PAUSE_VIEW = "showPauseView"

// MARK: - PauseView Status Label Texts
let PAUSE = "Pause"


// MARK: - ScoreStackView Score Labels
let INIT_KNOTS_LBL_TXT = "Knots: 0"
let INIT_MILES_LBL_TXT = "Miles: 0.00"
let INIT_CRASH_LBL_TXT = "Crashes: 0"


// MARK: - File Names

// SmokeView Spritkit File
let SMOKE_FILE_NAME = "Smoke.sks"

// GameRulesTableViewController Text File
let RULES_FILE_NAME = "Rules"
let TEXT_FILE_EXT = "txt"

// IcebergView Image File
let ICEBERG_IMAGE_NAME = "iceberg"

// ShipView Image File
let SHIP_IMAGE_NAME = "ship"


// MARK: - GameView and GameViewController Observer UserInfo Dictionary
let ICEBERG_VIEW_KEY = "icebergView"


// MARK: - GameRulesTableViewController Text File Content
let GOAL_SECTION_NAME = "Goal"
let USAGE_SECTION_NAME = "Usage"


// MARK: - GameViewController Labels
let GO_COUNTDOWN_LBL_TXT = "GO"
let ONE_COUNTDOWN_LBL_TXT = "1"
let CRASH_COUNT_LBL_TXT = "Crashes: "
let KNOTS_LBL_TEXT = "Knots: "
let SEA_MILES_LBL_TXT = "Miles: "
let GAME_OVER = "GAME OVER"
let GAME_END = "GAME END"
let YOU_WIN = "YOU WIN"


// MARK: - GameViewController Alert Controller

//Style: Action Sheet
let ACTION_TITLE = "Game Control"
let ACTION_TITLE_CANCEL_ACTION = "Cancel"

//Style: Alert
let ALERT_TITLE = "Congratulations 👏"
let ALERT_MESSAGE = "You`re in the Top 10. Please enter your name to see your ranking."
let ALERT_TITLE_DONE_ACTION = "Done"
let ALERT_TITLE_CANCEL_ACTION = "Cancel"
let ALERT_TEXT_FIELD_PLCHOLDER = "Your Name"

