...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yE-Pg-VuO">
                                <rect key="frame" x="166" y="426" width="58" height="46"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="startActionBtn:" destination="rgE-zM-luI" eventType="touchUpInside" id="vxM-sJ-4G4"/>
                                </connections>
                            </button>
...
