/*
 MIT License

Copyright (c) 2020 Maik Müller (maikdrop) <maik_mueller@me.com>

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

// MARK: - english translation

//Alert Titles
"ErrorAlert_Title" = "Error occurred";
"NewHighscoreEntryAlert_Title" = "Congratulations 👏";

//Game Control
"GameControl_Title" = "Game Control";
"GameControl_Saved" = "The game was saved successfully.";

//Error Messages
"File_Reading_Error" = "There was an error while reading highscore list.";
"JSON_Decoding_Error" = "There was an error while decoding highscore list.";
"File_Writing_Error" = "There was an error while writing highscore list.";
"JSON_Encoding_Error" = "There was an error while encoding highscore list.";
"Database_Reading_Error" = "There was an error while reading game data";
"Database_Writing_Error" = "There was an error while saving game data";
"Database_Deleting_Error" = "There was an error while deleting game data";

//Alert Components
"NewHighscoreEntry_Message" = "You`re in the Top 10. Please enter your name to see your ranking.";
"TextField_Placeholder" = "Your Name";

//Action Commands
"Action_Ok" = "OK";
"Action_Done" = "Done";
"Action_Cancel" = "Cancel";
"Action_Delete" = "Delete";
"Action_Edit" = "Edit";

//Deletion
"DeletionConfirmation_Title" = "";
"SingleDeletionConfirmation_Message" = "This game will be deleted. This action cannot be undone.";
"MultipleDeletionConfirmation_Message" = "These number games will be deleted. This action cannot been undone.";
"Number" = "number";

//Welcome
"Welcome_Title" = "Welcome to Titanic!";
"Welcome_RightBarBtnTitle" = "Storage";

//Rules
"Rules_SubheadlineTitle" = "Let`s have fun!";
"Rules_GoalSectionTitle" = "Goal";
"Rules_GoalSectionContent" = "Drive as many sea miles as possible!";
"Rules_UsageSectionTitle" = "Usage";
"Rules_UsageSectionContent_Rule1" =
        "In the welcome view you can either start a new game with your chosen speed or continue a stored game.";
"Rules_UsageSectionContent_Rule2" =
        "During the countdown at the beginning of a game, the boat is looking after a random or the stored position.";
"Rules_UsageSectionContent_Rule3" =
        "Move the boat with the slider at the bottom in order to avoid collisions with icebergs. Any collision will increase your crash count, and slow down your boat.";
"Rules_UsageSectionContent_Rule4" =
        "The game is over when you reach 5 crashes or the time is up. After the end of the game, the driven sea miles will be checked. If they are in the top ten, a highscore entry is provided.";
"Rules_UsageSectionContent_Rule5" =
        "The game can be controlled with the button in the upper right corner. Additionally, a running game can paused with a double tap on the screen.";

"FirstUseInstructions_Stored_Games_Btn" = "Stored Games";
"FirstUseInstructions_Speed_Options_Btn" = "Speed Options";
"FirstUseInstructions_Ctrl_Game_Btn" = "Game Control";
"FirstUseInstructions_Hide" = "Hide next time?";
"FirstUseInstructions_Rules_Section" = "Rules";
"FirstUseInstructions_Rules_Footer" = "Rules can be found in the App Information menu.";
"FirstUseInstructions_Title" = "How to Play?";

//Game
"GoLbl_Txt" = "GO";
"KnotsLbl_Txt" = "Knots";
"MilesLbl_Txt" = "Miles";
"CrashesLbl_Txt" = "Crashs";
"GameOverLbl_Txt" = "GAME OVER";
"YouWinLbl_Txt" = "YOU WIN";

//Highscore
"File_Name" = "highscore.json";

//Storage
"Storage_Title" = "Stored Games";

//Game State
"New" = "New";
"Pause" = "Pause";
"Resume" = "Resume";
"Save" = "Save & Quit";

//App Information
"AppInfoTitle_Txt" = "App Information";
"AboutTheAppLbl_Txt" = "About the App";
"ConceptLbl_Txt" = "Concept";
"LegalLbl_Txt" = "Legal Notices";
"RulesLbl_Txt" = "Rules";

//Concept
"Concept_DesignPatternTitle" = "MVP Design Pattern";
"Concept_AvoidMassiveVCTitle" = "Avoid Massive Game VC";
"Concept_LayoutTitle" = "Layout";

//SpeedOptions
"SpeedOption_Slow" = "Slow";
"SpeedOption_Medium" = "Medium";
"SpeedOption_Fast" = "Fast";
